Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22938

Debugger layout isn't saved if you don't run the debugger.

XMLWordPrintable

    • e9c0ba9997294bdf440b6e60d0a1eaf94b74baef (qt-creator/qt-creator/master) d8c78538a6af184d7ee672173d0a1b285dad4b89 (qt-creator/qt-creator/4.10)

      If you run Qt Creator without launching the debugger, the layout will be reset the next time you launch Qt Creator.

       

      Steps to reproduce:

      1. Run Qt Creator and adjust the debugger layout.
      2. Close Qt Creator.
      3. Open Qt Creator and close it immediately.
      4. Run Qt Creator again and start debugging. Notice that the layout has been reset.

        For Gerrit Dashboard: QTCREATORBUG-22938
        # Subject Branch Project Status CR V

            hjk hjk
            akb825 Aaron Barany
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes