Debugger: Do not forget perspective layouts on unused perspectives

Amends 5273ef2a8aa3c8d268b107edc770b53e1aed7803

Use cases mentioned there should still work.

Fixes: QTCREATORBUG-22938
Fixes: QTCREATORBUG-22286
Change-Id: Ie7bb6b7ea6d05a94cbeeb5b8021dc638548778d9
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
(cherry picked from commit e9c0ba9997294bdf440b6e60d0a1eaf94b74baef)
Reviewed-by: Eike Ziller <eike.ziller@qt.io>